--- a/packages/dashboard/index.html
+++ b/packages/dashboard/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Vendure Admin Dashboard" />
-    <meta name="author" content="Vendure" />
+    <meta name="description" content="Wilshop Admin Dashboard" />
+    <meta name="author" content="Wilshop" />
 </head>
 <body>
 <div id="app"></div>
